--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -5,7 +5,43 @@
     <div class="title-animation">
         <span class="title">RING OF FIRE</span>
     </div>
-    <span (click)="newGame()" class="starttext">Start the Game</span>
+
+
+    <svg class="svg-filter" xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <defs>
+            <filter id="gooey">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="5" result="blur"/>
+                <feColorMatrix in="blur" type="matrix" values="
+                1 0 0 0 0
+                0 1 0 0 0
+                0 0 1 0 0
+                0 0 0 19 -9
+                " result="highContrastGraphic"/>
+                <feComposite in="SourceGraphic" in2="highContrastGraphic" operator="atop"/>
+            </filter>
+        </defs>
+    </svg>
+
+    <button (click)="newGame()">
+        <span class="startgametext">
+            Start the Game
+        </span> 
+        <span class="bubbles">
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+            <span class="bubble"></span>
+        </span>
+    </button>
+
+
+    <!-- <span (click)="newGame()" class="starttext">Start the Game</span> -->
     <svg>
         <filter id="wave">
             <feTurbulence x="0" y="0" baseFrequency="0.009" numOctaves="5" seed="2">
