--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,4 +1,5 @@
 .playground{
+    position: relative;
     width: 100vw;
     height: 100vh;
     max-width: 100%;
@@ -9,6 +10,85 @@
     align-items: center;
 }
 
+
+.circle{
+    position: absolute;
+    width: 900px;
+    height: 900px;
+    filter: url(#wavy) blur(1px);
+}
+
+.circle:before{
+    content: '';
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    right: 100px;
+    bottom: 100px;
+    border: 20px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 50px #0f0,
+                inset 0 0 50px #0f0;
+    -webkit-box-reflect: below 10px linear-gradient(transparent, transparent, #0002);
+    animation: animate 5s linear infinite;
+}
+
+.circle:after{
+    content: '';
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    right: 100px;
+    bottom: 100px;
+    border: 20px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #fff,
+                inset 0 0 20px #fff;
+}
+
+@keyframes animate {
+    0%
+    {
+        box-shadow: 0 0 50px #0f0,
+                    inset 0 0 50px #0f0;
+        filter: hue-rotate(0deg);
+    }
+    20%
+    {
+        box-shadow: 0 0 60px #0f0,
+                    inset 0 0 60px #0f0;
+        filter: hue-rotate(360deg);
+    }
+    40%
+    {
+        box-shadow: 0 0 40px #0f0,
+                    inset 0 0 40px #0f0;
+    }
+    60%
+    {
+        box-shadow: 0 0 100px #0f0,
+                    inset 0 0 100px #0f0;
+    }
+    80%
+    {
+        box-shadow: 0 0 80px #0f0,
+                    inset 0 0 80px #0f0;
+    }
+    100%
+    {
+        box-shadow: 0 0 50px #0f0,
+                    inset 0 0 50px #0f0;
+        filter: hue-rotate(360deg);
+    }
+}
+
+svg{
+    width: 0;
+    height: 0;
+}
+
+
+
 .card-stack{
     position: relative;
     img{
@@ -17,6 +97,12 @@
         width: auto;
         cursor: pointer;
     }
+}
+
+.played-card{
+    right: 28px;
+    top: -20px;
+    transform: scale(1.5) translateX(140px) translateY(-180px) rotate(-10deg);
 }
 
 .pick-Card{
