--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,4 @@
+<app-player *ngFor="let player of game.players; let i=index" [ngStyle]="{'top.px': 50 + (i * 150)}" [name]="player" class="player-position"></app-player>
 <div class="playground">
     <div class="circle"></div>
     <svg>
