--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -124,3 +124,9 @@ svg{
         transform: scale(1.5) translateX(140px) translateY(-180px) rotate(-10deg);
     }
 }
+
+.player-position {
+    position: absolute;
+    right: 2%;
+    z-index: 5;
+}
