--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<app-player *ngFor="let player of game.players; let i=index" [ngStyle]="{'top.px': 50 + (i * 150)}" [name]="player" class="player-position"></app-player>
+<app-player *ngFor="let player of game.players; let i=index" [ngStyle]="{'top.px': 50 + (i * 100)}" [playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
 <div class="playground">
     <div class="circle"></div>
     <svg>
@@ -19,3 +19,9 @@
             src="/assets/img/cards/{{ currentCard }}.png">
     </div>
 </div>
+
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+
+<button *ngIf="game.players.length < 8" mat-fab color="primary" (click)="openDialog()" class="btn-add">
+    <mat-icon>add</mat-icon>
+  </button>
