--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
-<div class="player">
-    <img src="/assets/img/player/player1.png">
-    <span>{{ name}}</span>
+<div class="player" [class.player-active]="playerActive">
+    <img src="/assets/img/player/{{ picture }}.png">
+    <span>{{ name }}</span>
 </div>
