--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -6,12 +6,21 @@
         font-size: 24px;
         margin-left: 16px;
         color: rgb(255, 255, 255);
+        width: 150px;
+        text-align: left;
+        display: none;
     }
 
     img{
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         object-fit: cover;
         object-position:top;
+    }
+}
+
+.player-active {
+    span{
+        display: block;
     }
 }
