offline playable version

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -96,6 +96,10 @@ svg{
         height: 250px;
         width: auto;
         cursor: pointer;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
     }
 }
 
