--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
-    <img src="/assets/img/player/{{ picture }}.png">
+    <img src="/assets/img/player/player.png">
     <span>{{ name }}</span>
 </div>
