--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,7 +3,7 @@
     width: 100vw;
     height: 100vh;
     max-width: 100%;
-    background-image: url('/assets/img/background.jpg');
+    background-image: url('../../assets/img/background.jpg');
     background-position: center;
     display: flex;
     justify-content: center;
