--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,6 +1,6 @@
 <div class="start-screen">
     <div class="bgImg">
-        <img src="/assets/img/startBG.jpg" alt="" sizes="" srcset="">
+        <img src="assets/img/startBG.jpg" alt="" sizes="" srcset="">
     </div>
     <div class="title-animation">
         <span class="title">RING OF FIRE</span>
