--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -131,8 +131,8 @@ svg{
 
 .player-position {
     position: absolute;
-    right: 2%;
-    z-index: 5;
+    right: 0;
+    z-index: 2;
 }
 
 .btn-add{
