--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -15,12 +15,12 @@
         <img (click)="takeCard()" class="top-card" style="right: 25px; top: -20px"
             src="assets/img/cards/card_cover_p.png">
         <img class="played-card" *ngFor="let card of game.playedCards" src="assets/img/cards/{{ card }}.png">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-Card" style="right: 28px; top: -20px"
-            src="assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-Card" style="right: 28px; top: -20px"
+            src="assets/img/cards/{{ game.currentCard }}.png">
     </div>
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button *ngIf="game.players.length < 8" mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
