--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,7 +1,11 @@
 .player {
     display: flex;
     align-items: center;
-
+    z-index: 2;
+    background-color: rgb(230, 42, 255);
+    border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
+    
     span{
         font-size: 24px;
         margin-left: 16px;
@@ -10,10 +14,11 @@
         text-align: left;
         display: none;
     }
-
+    
     img{
         width: 80px;
         height: 80px;
+        border-bottom-left-radius: 20px;
         object-fit: cover;
         object-position:top;
     }
