--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -2,9 +2,12 @@
     display: flex;
     align-items: center;
     z-index: 2;
-    background-color: rgb(230, 42, 255);
+    background-color: rgba(233, 233, 233, 0.568);
     border-bottom-left-radius: 50px;
     border-top-left-radius: 50px;
+    border-top: solid 5px rgb(230, 42, 255);
+    border-bottom: solid 5px rgb(230, 42, 255);
+    border-left: solid 5px rgb(230, 42, 255);
     
     span{
         font-size: 24px;
@@ -18,7 +21,8 @@
     img{
         width: 80px;
         height: 80px;
-        border-bottom-left-radius: 20px;
+        border-radius: 50px;
+
         object-fit: cover;
         object-position:top;
     }
