--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,7 @@
-<app-player *ngFor="let player of game.players; let i=index" [ngStyle]="{'top.px': 50 + (i * 100)}" [playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
-<div class="playground">
+<div *ngIf="!gameOver" class="playground">
+    <div class="scroll-container player-position">
+        <app-player *ngFor="let player of game.players; let i=index" [playerActive]="i == game.currentPlayer" [name]="player"></app-player>
+    </div>
     <div class="circle"></div>
     <svg>
         <filter id="wavy">
@@ -11,17 +13,18 @@
     </svg>
     <div class="card-stack">
         <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 7, 'top.px': -i * 5}"
-            src="assets/img/cards/card_cover_p.png">
+        src="assets/img/cards/card_cover_p.png">
         <img (click)="takeCard()" class="top-card" style="right: 25px; top: -20px"
-            src="assets/img/cards/card_cover_p.png">
+        src="assets/img/cards/card_cover_p.png">
         <img class="played-card" *ngFor="let card of game.playedCards" src="assets/img/cards/{{ card }}.png">
-        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-Card" style="right: 28px; top: -20px"
-            src="assets/img/cards/{{ game.currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-Card" style="right: 25px; top: -20px"
+        src="assets/img/cards/{{ game.currentCard }}.png">
     </div>
+    <app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
+    
+    <button *ngIf="game.players.length < 8" mat-fab color="primary" (click)="openDialog()" class="btn-add">
+        <mat-icon>add</mat-icon>
+      </button>
 </div>
 
-<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
-
-<button *ngIf="game.players.length < 8" mat-fab color="primary" (click)="openDialog()" class="btn-add">
-    <mat-icon>add</mat-icon>
-  </button>
+<div *ngIf="gameOver" (click)="restart()" class="gameovercontainer"></div>
