--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -3,11 +3,15 @@
     align-items: center;
     z-index: 2;
     background-color: rgba(233, 233, 233, 0.568);
-    border-bottom-left-radius: 50px;
-    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
     border-top: solid 5px rgb(230, 42, 255);
     border-bottom: solid 5px rgb(230, 42, 255);
-    border-left: solid 5px rgb(230, 42, 255);
+    border-right: solid 5px rgb(230, 42, 255);
+    overflow: hidden;
+    margin-top: 8px;
+    max-width: 150px;
+    width: fit-content;
     
     span{
         font-size: 24px;
@@ -16,15 +20,25 @@
         width: 150px;
         text-align: left;
         display: none;
+
+        @media (max-width: 750px) {
+            font-size: 16px;
+            margin-right: 8px;
+            margin-left: 8px;
+            width: 90px;
+        }
     }
     
     img{
-        width: 80px;
-        height: 80px;
-        border-radius: 50px;
-
+        width: 40px;
+        height: 40px;
+        // border-radius: 50px;
         object-fit: cover;
         object-position:top;
+
+        @media (max-width: 750px) {
+            margin-left: 8px;
+        }
     }
 }
 
