--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -8,6 +8,11 @@
     align-items: center;
     position: relative;
     overflow: hidden;
+
+    @media (max-width: 1000px) {
+        // align-content:space-around;
+        // align-items: baseline;
+    }
 }
 
 .bgImg {
@@ -28,6 +33,10 @@
     color: rgb(13, 185, 238);
     font-size: 80px;
     animation: animatetext 5s linear infinite;
+
+    @media (max-width: 500px) {
+        font-size: 40px;
+    }
 }
 
 @keyframes animatetext {
@@ -40,7 +49,7 @@
     }
 }
 
-.svg-filter{
+.svg-filter {
     display: none;
 }
 
@@ -57,6 +66,10 @@ button {
     z-index: 3;
     filter: url('#gooey');
 
+    @media (max-width: 1000px) {
+        bottom: 15%;
+    }
+
     .bubbles {
         position: absolute;
         top: 0;
@@ -66,7 +79,7 @@ button {
     }
 }
 
-.startgametext{
+.startgametext {
     z-index: 5;
 }
 
@@ -99,7 +112,7 @@ button {
                     }
 
                     100% {
-                        transform: translate(0, 0); 
+                        transform: translate(0, 0);
                         opacity: 0
                     }
                 }
@@ -110,34 +123,34 @@ button {
 
 
 
-        .starttext {
-            z-index: 5;
-            position: absolute;
-            top: 70%;
-            left: 50%;
-            transform: translateX(-50%) translateY(-50%);
-            color: #2ef307;
-            font-size: 28px;
-            text-transform: uppercase;
+.starttext {
+    z-index: 5;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #2ef307;
+    font-size: 28px;
+    text-transform: uppercase;
 
-            &:hover {
-                cursor: pointer;
-                text-shadow: 0 0 15px #09ecec, 0 0 25px #09ecec;
-                filter: brightness(3);
-            }
-        }
+    &:hover {
+        cursor: pointer;
+        text-shadow: 0 0 15px #09ecec, 0 0 25px #09ecec;
+        filter: brightness(3);
+    }
+}
 
-        .title-animation {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 1200px;
-            height: 1200px;
-            filter: url(#wave) blur(1px);
-        }
+.title-animation {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1200px;
+    height: 1200px;
+    filter: url(#wave) blur(1px);
+}
 
-        svg {
-            width: 0;
-            height: 0;
-        }
+svg {
+    width: 0;
+    height: 0;
+}
