--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,26 @@
-body{
+body {
     margin: 0;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.gameovercontainer {
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+    background-image: url('./assets/img/gameover.jpg');
+    background-position: center;
+    cursor: pointer;
+
+    @media (max-width: 750px) {
+        background-size:cover;
+    }
+}
