--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -20,6 +20,8 @@
         width: 150px;
         text-align: left;
         display: none;
+        white-space: nowrap;
+        overflow: hidden;
 
         @media (max-width: 750px) {
             font-size: 16px;
