--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,4 +1,4 @@
-.playground{
+.playground {
     position: relative;
     width: 100vw;
     height: 100vh;
@@ -10,29 +10,31 @@
     align-items: center;
 
     @media (max-width: 900px) {
-       overflow: hidden;
-       background-size: auto;;
+        overflow: hidden;
+        background-size: auto;
+        ;
     }
-    
+
 }
 
-.circle{
+.circle {
     position: absolute;
     width: 900px;
     height: 900px;
     filter: url(#wavy) blur(1px);
-    
+
     @media (max-width: 900px) {
         width: 780px;
         height: 780px;
     }
+
     @media (max-width: 600px) {
         width: 600px;
         height: 600px;
     }
 }
 
-.circle:before{
+.circle:before {
     content: '';
     position: absolute;
     top: 100px;
@@ -42,12 +44,12 @@
     border: 50px solid #fff;
     border-radius: 50%;
     box-shadow: 0 0 50px #0f0,
-                inset 0 0 50px #0f0;
+        inset 0 0 50px #0f0;
     -webkit-box-reflect: below 10px linear-gradient(transparent, transparent, #0002);
     animation: animate 5s linear infinite;
 }
 
-.circle:after{
+.circle:after {
     content: '';
     position: absolute;
     top: 100px;
@@ -57,53 +59,53 @@
     border: 50px solid #fff;
     border-radius: 50%;
     box-shadow: 0 0 10px #fff,
-                inset 0 0 20px #fff;
+        inset 0 0 20px #fff;
 }
 
 @keyframes animate {
-    0%
-    {
+    0% {
         box-shadow: 0 0 50px #0f0,
-                    inset 0 0 50px #0f0;
+            inset 0 0 50px #0f0;
         filter: hue-rotate(0deg);
     }
-    20%
-    {
+
+    20% {
         box-shadow: 0 0 60px #0f0,
-                    inset 0 0 60px #0f0;
+            inset 0 0 60px #0f0;
         filter: hue-rotate(360deg);
     }
-    40%
-    {
+
+    40% {
         box-shadow: 0 0 40px #0f0,
-                    inset 0 0 40px #0f0;
+            inset 0 0 40px #0f0;
     }
-    60%
-    {
+
+    60% {
         box-shadow: 0 0 100px #0f0,
-                    inset 0 0 100px #0f0;
+            inset 0 0 100px #0f0;
     }
-    80%
-    {
+
+    80% {
         box-shadow: 0 0 80px #0f0,
-                    inset 0 0 80px #0f0;
+            inset 0 0 80px #0f0;
     }
-    100%
-    {
+
+    100% {
         box-shadow: 0 0 50px #0f0,
-                    inset 0 0 50px #0f0;
+            inset 0 0 50px #0f0;
         filter: hue-rotate(360deg);
     }
 }
 
-svg{
+svg {
     width: 0;
     height: 0;
 }
 
-.card-stack{
+.card-stack {
     position: relative;
-    img{
+
+    img {
         position: absolute;
         height: 250px;
         width: auto;
@@ -115,11 +117,11 @@ svg{
     }
 }
 
-.played-card{
+.played-card {
     right: -28px;
     top: -20px;
     transform: scale(1.5) translateX(140px) translateY(-180px) rotate(-10deg);
-    
+
     @media (max-width: 750px) {
         right: -28px;
         top: -20px;
@@ -127,7 +129,7 @@ svg{
     }
 }
 
-.pick-Card{
+.pick-Card {
     animation: pick-card-animation 1s ease-in-out;
     transform: scale(1.5) translateX(140px) translateY(-180px) rotate(-10deg);
 
@@ -138,12 +140,15 @@ svg{
             0% {
                 transform: scale(1);
             }
+
             25% {
                 transform: scale(1.2);
             }
+
             50% {
                 transform: scale(1.2);
             }
+
             100% {
                 transform: scale(1.1) translateX(140px) translateY(-180px) rotate(-10deg);
             }
@@ -156,55 +161,58 @@ svg{
     0% {
         transform: scale(1);
     }
+
     25% {
         transform: scale(1.7);
     }
+
     50% {
         transform: scale(1.7);
     }
+
     100% {
         transform: scale(1.5) translateX(140px) translateY(-180px) rotate(-10deg);
     }
 }
 
-    .scroll-container{
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: 2;
-        overflow-y:auto;
-        max-height: 300px;
-        display: flex;
-        flex-direction: column;
+.scroll-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    overflow-y: auto;
+    max-height: 300px;
+    display: flex;
+    flex-direction: column;
 
-        app-player{
-            margin-top: 16px;
-        }
-
-        .player-position {
-            left: 0;
-            z-index: 2;
-        }
+    app-player {
+        margin-top: 16px;
     }
 
-.btn-add{
+    .player-position {
+        left: 0;
+        z-index: 2;
+    }
+}
+
+.btn-add {
     position: absolute;
     right: 32px;
     bottom: 32px;
-    
-    @media (max-width: 750px){
+
+    @media (max-width: 750px) {
         right: 16px;
         bottom: 16px;
     }
 }
 
-.pin-bottom{
+.pin-bottom {
     position: absolute;
     bottom: 32px;
     left: 50%;
     margin-left: -250px;
     right: 200px;
-    
+
     @media (max-width: 750px) {
         bottom: 0;
         left: 0;
